# forecasting-platform

./: .gitignore  CLAUDE.md  Makefile  SLIDES_HACKATHON_SIC2025.md  app.py  docker-compose.yml  hackathon_sic2025.html  hackathon_sic2025.ipynb  main.py  pyproject.toml  requirements.txt  test_env.py  theme.py
.streamlit/: config.toml
data/forecasts/: churn_analysis.parquet  forecasts.parquet  inventory_risk.parquet  loop6_ci_predictions.parquet  loop7_recursive_forecasts.parquet  loop8_blended_forecasts.parquet  (+1 more)
pipelines/: loop2_flow.py  loop3_flow.py  loop4_flow.py  loop5_flow.py  loop6_flow.py  loop7_flow.py  loop8_flow.py  mlflow_tracking.py  training_flow.py
reports/: LOOP2_EXECUTION_REPORT.md  LOOP3_EXECUTION_REPORT.md  LOOP4_EXECUTION_REPORT.md  LOOP5_EXECUTION_REPORT.md  LOOP6_EXECUTION_REPORT.md  LOOP7_EXECUTION_REPORT.md  LOOP8_EXECUTION_REPORT.md  anomaly_report.json  benchmark_report.json  churn_report.json  dq_report.json  feature_report.json  forecast_report.json  ingestion_report.json  inventory_risk_report.json  lgbm_report.json  loop2_flow_summary.json  loop3_flow_summary.json  loop3_two_stage_report.json  loop4_cv_report.json  loop4_flow_summary.json  loop5_enhanced_report.json  loop5_flow_summary.json  loop6_cv_report.json  loop6_flow_summary.json  loop7_bias_factors.json  loop7_flow_summary.json  loop7_recursive_forecast_report.json  loop8_blended_report.json  loop8_flow_summary.json  prefect_flow_dag.json  profiling_report.json  runtime_profiling_report.json  schema_validation.json  validation_report.json
tests/: test_leakage.py
(+66 files in other folders)
